syntax = "proto3";

package kv;

option go_package = "kv-storage/proto";

service KVService {
    rpc Set(SetRequest) returns (SetResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Join(JoinRequest) returns (JoinResponse);
}

message JoinRequest {
  string nodeID = 1;
  string raftAddress = 2; 
}

message JoinResponse {
  bool success = 1;
}

message SetRequest {
    string key = 1;
    bytes value = 2;
}

message SetResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
}